# qubify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
qubify/: __init__.py  compiler.py  constraints.py  expressions.py  utils.py
qubify/presets/: __init__.py  knapsack.py  maxcut.py  tsp.py
tests/: test_compiler.py  test_constraints.py  test_expressions.py  test_presets.py  test_utils.py
