[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qubify"
version = "0.1.0"
description = "qubify = make it QUBO — a constraint-to-QUBO compiler for quantum optimization"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.10"
authors = [
    {name = "Lehao Lin", email = "lehaolin@lehao.xyz"},
]
keywords = ["qubo", "ising", "optimization", "quantum-computing", "constraint-programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/LehaoLin/qubify"
Repository = "https://github.com/LehaoLin/qubify"
Documentation = "https://github.com/LehaoLin/qubify#readme"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["qubify*"]
